feat: creating route to update publisher
