# src/modules/publishers/domain/dtos/IUpdatePublisherDTO.ts
@@ -1,0 +1,6 @@
+export interface IUpdatePublisherDTO {
+  name?: string;
+  address?: string;
+  phone?: string;
+  website?: string;
+}
